--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>My Resume</h1>
 
-	<img src="karim_pic.jpg" width="150px" height="250px">
+	<img src="./karim_pic.jpg" width="150px" height="250px" alt="my_resume_picture">
 
 	<h2>Karim mohamed el said tolba</h2>
 
